--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     </head>
     <body>
         <h2>Quantum Composer</h2>
+
+
+         <br>
+        <div class="navbar">
+            <a href="counterExample.html">Bad Counterexample</a>
+            <a href="methods.html">Methods</a>
+            <a href="result.html">Result</a>
+            <a href="future.html">Future</a> 
+        </div>
+
+        
         <div class="first-audio-div">
-            <h3>Basic Sound Elements</h3>
+            <h3 class="first-title">Basic Sound Elements</h3>
           
             <img class="first-audio-img" src="1.jpeg">
             <audio class="first-audio" controls>
-                <source src="testerMusic.mp3">
+                <source src="A (1).mp3">
             </audio>
         </div>
         <br>
@@ -22,7 +33,9 @@
                 <source src="testerMusic.mp3" type="audio/ogg">
             </audio>
         </div>
-
+        <h3 class="second-title">
+            Library of Sounds
+        </h3>
         <div class="box1">
             <img src="1.jpeg">
             <img src="1.jpeg">
