--- a/methods.html
+++ b/methods.html
@@ -15,6 +15,21 @@
         </div>
 
 
+     
+        <h2 class="methods-title"> Quantum Procedural Generation</h2>
+        <img src="research-image.png"  class="research-image">
+        <br>
+        <a href="https://arxiv.org/pdf/2007.11510.pdf">Source: Procedural generation using quantum computation</a>
+        <br>
+        <h3 class="research-paper-explanation">Procedural generation uses partial quantum swap operator to convert from one set of qbits to a different one according to a set proportion, <i>x</i>
+        </h3>
+        <h2 class="methods-title"> Quantum Circuit</h2>
+        <img class="quantum-circuit" src="quantum-circuit.png">
+        <h3 class="quantum-circuit-explanation">The quantum circuit consists of rotations by specified angles to get qbits <i>a</i> and <i>b</i> into the proper phase. Then, a unitary operation consisting of a partial swap from <i>a</i> to <i>b</i> is applied; the relevant measurement is on qbit <i>a</i> at the end of the circuit. 
+        </h3>
+
+        <h2 class="swap-matrix">Swap Matrix</h2>
+        <img class="swap-matrix-img" src="swap-matrix.png">
 
         
 </body>
