--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         
         <div class="first-audio-div">
-            <h3 class="first-title">Swapping sound elements gradually</h3>
+            <h3 class="first-title">Basic Sound Elements</h3>
           
             <img class="first-audio-img" src="A.png">
             <audio class="first-audio" controls>
